Run tox from Travis

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,6 @@ deps =
     pyftpdlib
     pytest-xdist
 commands =
-    py.test {posargs:tests}
+    py.test {posargs:--tb=short tests}
 setenv =
     LC_ALL=en_US.utf-8
