--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,12 @@ python:
 branches:
   only:
     - master
-# install required system packages
-addons:
-  apt:
-    packages:
-    - python-dev
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
-  - pip install pyftpdlib pytest-xdist
+  - pip install tox-travis
 # command to run tests
-script: make test PYTESTOPTS="--tb=short" TESTS="tests/test_*.py tests/configuration/test_*.py tests/logger/test_*.py tests/checker/test_httpbin.py"
+script:
+  - tox
 # do not send emails of broken builds
 notifications:
   email: false
