--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ deps =
     -rrequirements.txt
     pyftpdlib
     pytest-xdist
+    pytest-cov
 commands =
-    py.test {posargs:--tb=short tests}
+    py.test {posargs:--tb=short --cov=linkcheck tests}
 setenv =
     LC_ALL=en_US.utf-8
