--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: python
 python:
   - "2.7"
-# whitelist of git branches to build
-branches:
-  only:
-    - master
+  - "3.5"
+  - "3.6"
 # command to install dependencies
 install:
   - pip install tox-travis coveralls
@@ -16,3 +14,7 @@ notifications:
   email: false
 after_script:
   - coveralls
+matrix:
+   allow_failures:
+      - python: "3.5"
+      - python: "3.6"
