--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,7 @@ matrix:
       - python: "3.5"
       - python: "3.6"
       - python: "3.7"
+env:
+  global:
+    # workaround Python 3.6 incompatibility #238
+    - PYTHONMALLOC=malloc
