--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,7 @@ matrix:
    allow_failures:
       - python: "3.5"
       - python: "3.6"
+env:
+  global:
+    # workaround Python 3.6 incompatibility #238
+    - PYTHONMALLOC=malloc
