enable and fix remaining bookmark tests
biplist module preferred for reading Safari bookmarks in
bookmarks/safari.py so install it for tox testing.

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps =
     pytest-xdist
     pytest-cov
     miniboa
+    biplist
 commands =
     py.test {posargs:--tb=short --cov=linkcheck tests}
 setenv =
