Move some pytest options into pytest.ini
This is so that I can run `tox -- -n 8` to run the tests in parallel, or
`tox -- tests/checker/test_misc.py::TestMisc::test_html5` to run just a
single test, without having to repeat all the other options.

I haven't moved --cov=linkcheck because I don't want coverage results
when I'm limiting the test run to a single test (they just make the
interesting bit -- the test result itself -- scroll up).

I've also added -ra to the default option list because then several
tests fail, I'd like to see a list of their names in one place, not
spead out between the huge tracebacks.

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ deps =
     miniboa
     biplist
 commands =
-    py.test {posargs:--tb=short --cov=linkcheck tests}
+    pytest {posargs:--cov=linkcheck}
 setenv =
     LC_ALL=en_US.utf-8
