--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ deps =
     -rrequirements.txt
     pyftpdlib
     parameterized
+    pdfminer < 20191010
     pytest-xdist
     pytest-cov
     miniboa
