Update the clamav database

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ addons:
 install:
   - pip install tox-travis coveralls
 before_script:
+  # we need to download the clamav signature database before the daemon will run
+  - service clamav-freshclam stop
+  - freshclam
+  - service clamav-daemon restart
   - service clamav-daemon status
   - while ! test -S /var/run/clamav/clamd.ctl; do printf "."; sleep 1; done
 # command to run tests
@@ -27,3 +31,7 @@ matrix:
     - python: "3.5"
     - python: "3.6"
     - python: "3.7"
+cache:
+  pip: true
+  directories:
+    - /var/lib/clamav/
