Fix all Python 3 tox environments
Old pdfminer supports Python 2 only, new pdfminer supports Python 3
only.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ deps =
     -rrequirements.txt
     pyftpdlib
     parameterized
-    pdfminer < 20191010
+    py27: pdfminer < 20191010
+    !py27: pdfminer
     pytest-xdist
     pytest-cov
     miniboa
