Enable https checking using a test server
Verification has to be turned off because we are using a
self-signed certificate.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     parameterized
     py27: pdfminer < 20191010
     !py27: pdfminer
+    pyopenssl
     pytest-xdist
     pytest-cov
     miniboa
