--- a/tox.ini
+++ b/tox.ini
@@ -31,3 +31,8 @@ deps =
     dnspython
     future
     {[base]deps}
+
+[travis]
+# don't run py35-oldbs4 by default in the Python 3.5 job
+python =
+  3.5: py35
