--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: python
 python:
-  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
 jobs:
+  include:
+    - python: "3.5"
+      env: TOXENV=py35
   include:
     - python: "3.5"
       env: TOXENV=py35-oldbs4
