Clean up travis and tox.ini
I want the Python 3.5 travis job to run just tox -e py35, without the
oldbs4 job, and without an explicit TOXENV setting that is awkward to
insert in the .travis.yml (also, it reorders the jobs putting 3.5 below
3.8 which annoys me).

I think I found a way of doing that by renaming py35-oldbs4 to oldbs4.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{35,36,37,38,35-oldbs4}
+envlist = py35, py36, py37, py38, oldbs4
 
 [base]
 deps =
@@ -22,8 +22,9 @@ commands =
 setenv =
     LC_ALL=en_US.utf-8
 
-[testenv:py35-oldbs4]
+[testenv:oldbs4]
 # test bs4 without line number support
+basepython = python3
 deps =
     beautifulsoup4 < 4.8.1
     requests >= 2.4
