--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: python
 python:
+  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
 jobs:
   include:
     - python: "3.5"
-      env: TOXENV=py35
-    - python: "3.5"
-      env: TOXENV=py35-oldbs4
+      env: TOXENV=oldbs4
   allow_failures:
     - python: "3.5"
-      env: TOXENV=py35-oldbs4
+      env: TOXENV=oldbs4
 # command to install dependencies
 addons:
   apt:
