--- a/po/Makefile
+++ b/po/Makefile
@@ -2,7 +2,7 @@ XGETTEXT := xgettext
 MSGFMT := msgfmt
 MSGMERGE := msgmerge
 POSOURCES = $(shell find ../linkcheck -name \*.py) \
-	../linkchecker /usr/lib/python2.7/argparse.py
+	../linkchecker /usr/lib/python3.8/argparse.py
 LDIR = ../share/locale
 PACKAGE = linkchecker
 TEMPLATE = $(PACKAGE).pot
@@ -10,7 +10,7 @@ MYMAIL := bastian.kleineidam@web.de
 LFILE = LC_MESSAGES/$(PACKAGE).mo
 # defined language (add new languages here)
 LANGUAGES = de fr es
-MOFILES = $(wildcard *.po)
+MOFILES = $(wildcard *.mo)
 
 all:	$(MOFILES)
 
@@ -26,12 +26,6 @@ $(TEMPLATE): $(POSOURCES)
 	  --copyright-holder="Bastian Kleineidam <$(MYMAIL)>" \
 	  --msgid-bugs-address=$(MYMAIL) -o $(TEMPLATE) \
 	  --keyword=_n:1,2 $(POSOURCES)
-
-%.mo:	%.po
-	if [ ! -d $(LDIR)/$*/LC_MESSAGES ]; then \
-	  mkdir -p $(LDIR)/$*/LC_MESSAGES; \
-	fi
-	$(MSGFMT) -c --statistics -o $(LDIR)/$*/$(LFILE) $<
 
 clean:
 	@for f in $(LANGUAGES); do rm -f $(LDIR)/$$f/$(LFILE); done
