Add a 'tox -e flake8'

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,20 @@ python = python
 
 [bdist_wheel]
 universal = 0
+
+[flake8]
+builtins = _
+max-line-length = 80
+extend-ignore =
+# https://pep8.readthedocs.org/en/latest/intro.html#error-codes
+# these are ignored by default:
+# E121: continuation line under-indented for hanging indent
+# E123: closing bracket does not match indentation of opening bracket’s line
+# E126: continuation line over-indented for hanging indent
+# E133: closing bracket does not match visual indentation
+# E226: missing whitespace around arithmetic operator
+# E241: multiple spaces after ‘,’
+# E242: tab after ‘,’
+# E704: multiple statements on one line (def)
+# W503: line break before binary operator
+# W504: line break after binary operator
