--- a/tox.ini
+++ b/tox.ini
@@ -31,3 +31,8 @@ deps =
     pyxdg
     dnspython
     {[base]deps}
+
+[testenv:flake8]
+deps = flake8
+skip_install = true
+commands = flake8 setup.py linkcheck {posargs}
