--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,9 @@ python = python
 [bdist_wheel]
 universal = 0
 
+[check-manifest]
+ignore-bad-ideas = *.mo
+
 [flake8]
 builtins = _
 max-line-length = 80
