--- a/tox.ini
+++ b/tox.ini
@@ -36,3 +36,8 @@ deps =
 deps = flake8
 skip_install = true
 commands = flake8 setup.py linkcheck {posargs}
+
+[testenv:check-manifest]
+deps = check-manifest
+skip_install = true
+commands = check-manifest
