--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ deps =
 [testenv:flake8]
 deps = flake8
 skip_install = true
-commands = flake8 setup.py linkcheck {posargs}
+commands = flake8 linkchecker setup.py linkcheck {posargs}
 
 [testenv:check-manifest]
 deps = check-manifest
