Restore better_exchook2.py and colorama.py to pre-Black state
These files are based on published packages.

better_exchook2.py was derived from better_exchook.py in:
https://pypi.org/project/better_exchook/

colorama.py was derived from win32.py in:
https://pypi.org/project/colorama/

Files modified in:
a92a684a ("Run black on linkcheck/", 2020-05-30)

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ filename =
 extend-exclude =
     build/
     _LinkChecker_configdata.py
+# Derived from published packages
+    linkcheck/better_exchook2.py
+    linkcheck/colorama.py
 builtins =
     _
     _n
