Add a test for the LocationInfo plugin
Because the GeoIP database now requires registration to download the
result of the lookup using geoip-database is not going to change.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ addons:
   apt:
     packages:
       - clamav-daemon
+      - geoip-database
+      - libgeoip-dev
 install:
   - pip install tox-travis coveralls
 before_script:
