Generate man pages with Sphinx

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -42,8 +42,7 @@ recursive-include doc                   \
     *.txt                               \
     *.yml                               \
     Makefile                            \
-    linkcheckerrc_*                     \
-    po4a.conf
+    linkcheckerrc_*
 recursive-include po                    \
     *.mo                                \
     *.po                                \
