--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,7 +1,7 @@
 MANFILES:=linkchecker.1 linkcheckerrc.5
 LOCALES:=en de
 
-all:
+all: html man
 
 code: clean
 	PYTHONPATH=.. sphinx-autogen src/code/index.rst
@@ -9,23 +9,23 @@ code: clean
 html:
 	make -C src html
 
-po4a:
-	po4a --localized-charset=UTF-8 po4a.conf
+man:
+	make -C src man; \
+	make -C src -e SPHINXOPTS="-D language='de'" LANGUAGE="de" man
 
 # check all makefiles for formatting warnings
 check:
-	@t=$(shell tempfile); \
-	for loc in $(LOCALES); do \
+	@for loc in $(LOCALES); do \
 	  for manfile in $(MANFILES); do \
 	    echo "Checking $$loc/$$manfile"; \
-	    LC_ALL=en_US.UTF-8 MANWIDTH=80 man --warnings -E UTF-8 -l $$loc/$$manfile > /dev/null 2>$$t ; \
-	    if [ -s $$t ]; then cat $$t; exit 1; fi; \
+	    LC_ALL=en_US.UTF-8 MANWIDTH=80 mandoc -T lint -W error $$loc/$$manfile; \
 	  done; \
 	done
 
 clean:
 	rm -rf src/_build; \
 	rm -rf src/code/linkcheck; \
-	rm -rf html
+	rm -rf html; \
+	rm -rf man
 
-.PHONY: po4a check clean html
+.PHONY: check clean html man
