Generate html documentation with Sphinx
Create code documentation:
make -C doc code

Create html:
make -C doc html

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ Changelog.linkchecker*
 tests/checker/data/https_cert.pem
 tests/checker/data/https_key.pem
 coverage.xml
+doc/html
+doc/src/_build
+doc/src/code/linkcheck
