--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ per-file-ignores =
 # F401: module imported but unused
     linkchecker: E402
     setup.py: E402
+    doc/src/conf.py: E402
     linkcheck/__init__.py: E402,F401
     linkcheck/checker/httpurl.py: E402
     linkcheck/htmlutil/htmlsoup.py: E402
