Add slack to the list of ignored schemes
slack:// is a way to interact with a local Slack client [1], and is not
something that LinkChecker can check.

[1] https://api.slack.com/reference/deep-linking#client

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,8 @@ per-file-ignores =
     tests/__init__.py: F401
 # E501: line too long
     linkcheck/ftpparse.py: E501
+    linkcheck/checker/unknownurl.py: E501
+    scripts/update_iana_uri_schemes.py: E501
     tests/test_ftpparse.py: E501
 # F821 undefined name
 # https://github.com/PyCQA/pyflakes/issues/548
