--- a/tests/configuration/data/config0.ini
+++ b/tests/configuration/data/config0.ini
@@ -103,8 +103,8 @@ colorwarning=#ff0000
 colorerror=#ff0000
 colorok=#ff0000
 
-[blacklist]
-filename=blacklist
+[failures]
+filename=failures
 encoding=utf-8
 
 [xml]
