Can't build GeoIP on MS Windows, missing GeoIP.h
   py_GeoIP.c(23): fatal error C1083: Cannot open include file: 'GeoIP.h': No such file or directory
  error: command 'C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Tools\\MSVC\\14.27.29110\\bin\\HostX86\\x64\\cl.exe' failed with exit status 2
  ----------------------------------------
  ERROR: Failed building wheel for GeoIP

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, py310
+envlist = {py36,py37,py38,py39,py310}-{unix,windows}
 
 [base]
 deps =
@@ -11,9 +11,12 @@ deps =
     pytest-xdist
     pytest-cov
     miniboa >= 1.0.8
-    GeoIP
+    unix: GeoIP
 
 [testenv]
+platform =
+    unix: darwin|linux
+    windows: win32
 usedevelop = true
 deps =
     -rrequirements.txt
