Fix deprecation warning for resolver.query()
/home/travis/build/linkchecker/linkchecker/linkcheck/checker/mailtourl.py:321: DeprecationWarning: please use dns.resolver.resolve() instead
    answers = resolver.query(domain, 'MX')

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps =
     beautifulsoup4 < 4.8.1
     requests >= 2.4
     pyxdg
-    dnspython
+    dnspython >= 2.0
     {[base]deps}
 
 [testenv:flake8]
