Drop Python 3.5, add 3.9

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 dist: bionic
 language: python
 python:
-  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9-dev"
 jobs:
   include:
-    - python: "3.5"
+    - python: "3.6"
       env: TOXENV=oldbs4
     - name: flake8
       env: TOXENV=flake8
