Drop support for Beautiful Soup < 4.8.1
The minimum version supported was already 4.8.0 because of the use
of multi_valued_attributes [1].

Test support for < 4.8.1 is the only code that needs removing [2].

[1] 3ff3d724 ("Use BeautifulSoup element attrs directly", 2020-04-03)
[2] 607328d5 ("Support Beautiful Soup line numbers", 2019-10-05)

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, oldbs4
+envlist = py36, py37, py38, py39
 
 [base]
 deps =
@@ -21,16 +21,6 @@ commands =
     pytest {posargs:--cov=linkcheck}
 setenv =
     LC_ALL=en_US.utf-8
-
-[testenv:oldbs4]
-# test bs4 without line number support
-basepython = python3
-deps =
-    beautifulsoup4 < 4.8.1
-    requests >= 2.4
-    pyxdg
-    dnspython >= 2.0
-    {[base]deps}
 
 [testenv:flake8]
 deps = flake8
