Convert .travis.yml to GitHub Actions
Also add tox -e check-python-versions because it was low-hanging fruit
and I wanted to be sure.

--- a/tox.ini
+++ b/tox.ini
@@ -30,4 +30,9 @@ commands = flake8 {posargs}
 [testenv:check-manifest]
 deps = check-manifest
 skip_install = true
-commands = check-manifest
+commands = check-manifest {posargs}
+
+[testenv:check-python-versions]
+deps = check-python-versions
+skip_install = true
+commands = check-python-versions {posargs}
