Stop including binary translation catalogs in the source
Makes it easier to contribute and accept translations.

Does add a new dependency on installation from source, polib. This is
not made mandatory because not all users will want translations.

polib has no further dependencies and can be installed anywhere
LinkChecker can, using pip too.

Add release process step to check polib is installed

The Wheel still includes translations. Recommend install from PyPI in
the README.

Translations were being compiled in setup.py until 2014, using a bundled
copy of msgfmt.py.
9c3739f1c ("Replace msgfmt.py with local tools.", 2014-09-08)

--- a/po/Makefile
+++ b/po/Makefile
@@ -3,20 +3,13 @@ MSGFMT := msgfmt
 MSGMERGE := msgmerge
 POSOURCES = $(shell find ../linkcheck -name \*.py) \
 	../linkchecker $(shell python3 -c 'import argparse; print(argparse.__file__)')
-LDIR = ../share/locale
 PACKAGE = linkchecker
 TEMPLATE = $(PACKAGE).pot
 MYMAIL := bastian.kleineidam@web.de
 BUGSURL = https://github.com/linkchecker/linkchecker
-LFILE = LC_MESSAGES/$(PACKAGE).mo
-# defined language (add new languages here)
-LANGUAGES = de fr es
-MOFILES = $(wildcard *.mo)
+POFILES = $(wildcard *.po)
 
-all:	$(MOFILES)
-
-%.mo:	%.po
-	$(MSGFMT) -c --statistics -o $@ $<
+all:	$(POFILES)
 
 %.po:	$(TEMPLATE)
 	$(MSGMERGE) -U --suffix=.bak $@ $<
@@ -35,7 +28,6 @@ check:
 	done
 
 clean:
-	@for f in $(LANGUAGES); do rm -f $(LDIR)/$$f/$(LFILE); done
-	rm -f *.mo *.bak
+	rm -f *.bak
 
 .PHONY: check clean
