--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -5,6 +5,7 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['master']
+    tags: 'v*'
 
 env:
   REGISTRY: ghcr.io
@@ -30,6 +31,10 @@ jobs:
         uses: docker/metadata-action@548e2346a9987b56d8a4104fe776321ff8e23440
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: latest=true
+          tags: |
+            type=semver,pattern={{version}}
+            type=sha,prefix=
 
       - name: Build and push Docker image
         uses: docker/build-push-action@a66e35b9cbcf4ad0ea91ffcaf7bbad63ad9e0229
