--- a/tox.ini
+++ b/tox.ini
@@ -37,3 +37,8 @@ commands = check-manifest {posargs}
 deps = check-python-versions
 skip_install = true
 commands = check-python-versions {posargs}
+
+[testenv:yamllint]
+deps = yamllint
+skip_install = true
+commands = yamllint {posargs} -s .github/workflows/
