--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        # Needed for setuptools_scm to extract LinkChecker version from tag
+        # https://github.com/actions/checkout/issues/249
+        with:
+          fetch-depth: 0
 
       - name: Install Ubuntu packages
         run: sudo apt install graphviz
