Set release date from HEAD
Match the version reported using setuptools_scm.
Use the same git command as setuptools_scm uses for node_date.

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,9 @@ universal = 0
 
 [check-manifest]
 ignore-bad-ideas = *.mo
-ignore = *.rej
+ignore =
+    *.rej
+    _release_date
 
 [flake8]
 filename =
