--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,7 @@ include install-rpm.sh
 include .project
 include .pydevproject
 include .yamllint
+include _release_date
 
 recursive-include cgi-bin               \
     *.css                               \
