Ensure application translations are updated by workflow

--- a/.github/workflows/branch-man.yml
+++ b/.github/workflows/branch-man.yml
@@ -49,9 +49,9 @@ jobs:
 
       - name: Build application translations catalogs
         run: |
+            rm -f po/linkchecker.pot
             make -C po
-            # It's OK if no changes were made
-            git commit -a -m "Update application translation catalogs" || true
+            git commit -a -m "Update application translation catalogs"
 
       - name: Push changes
         run: >
