--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,7 +102,8 @@ jobs:
 
       - name: Install Python packages
         run: |
-          pip install -r requirements.txt Sphinx sphinx-epytext sphinx-intl sphinx-rtd-theme
+          pip install -r requirements.txt Sphinx sphinx-epytext sphinx-intl \
+            sphinx-rtd-theme sphinx-sitemap
 
       - name: Build
         run: |
