Generate linkchecker command using an entry point
drop_privileges() is only used by the linkchecker command.
Move installing SIGUSR1 handler to the linkchecker command only - fixes
intermittent test failures.

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,6 @@ ignore =
 [flake8]
 filename =
     *.py
-    ./linkchecker
 extend-exclude =
     build/
     _LinkChecker_configdata.py
@@ -37,7 +36,6 @@ per-file-ignores =
 # In several files imports intentionally cause:
 # E402: module level import not at top of file
 # F401: module imported but unused
-    linkchecker: E402
     setup.py: E402
     doc/src/conf.py: E402,F821
     linkcheck/__init__.py: E402,F401
@@ -48,6 +46,7 @@ per-file-ignores =
 # E501: line too long
     linkcheck/ftpparse.py: E501
     linkcheck/checker/unknownurl.py: E501
+    linkcheck/command/arg_parser.py: E501
     scripts/update_iana_uri_schemes.py: E501
     tests/test_ftpparse.py: E501
 # F821 undefined name
