--- a/.github/workflows/release-files.yml
+++ b/.github/workflows/release-files.yml
@@ -39,6 +39,10 @@ jobs:
         run: >
             twine check dist/*
 
+      - name: Calculate checksums for distribution files
+        run: >
+            sha256sum dist/*
+
       - name: Add distribution files to release
         run: >
             gh release upload ${{ github.ref_name }} dist/*
