--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ include Dockerfile
 include MANIFEST.in
 include Makefile
 include install-rpm.sh
+include pyoxidizer.bzl
 include .project
 include .pydevproject
 include .yamllint
