--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build
         run: |
-            python3 setup.py build
+            python3 setup.py build egg_info
             make -C doc code
             make -C doc html
 
