--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
     steps:
       - name: Install OS dependencies
         run: |
+          sudo apt update
           sudo apt install -y clamav-daemon geoip-database libgeoip-dev gettext
 
       - name: Download the ClamAV signature database
