add option to ignore specific errors for specific URLs

--- a/tests/configuration/data/config0.ini
+++ b/tests/configuration/data/config0.ini
@@ -51,6 +51,9 @@ verbose=1
 warnings=1
 quiet=0
 fileoutput = Text, html, Gml, sql,csv, xml, gxml, dot
+ignoreerrors=
+  ^https://example.com/does-not-exist ^404
+  ^mailto:foo
 
 [text]
 filename=imadoofus.txt
