--- a/.github/workflows/branch-man.yml
+++ b/.github/workflows/branch-man.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Python packages
         run: >
-            pip3 install dnspython beautifulsoup4 pyxdg requests \
+            pip3 install dnspython beautifulsoup4 requests \
                          sphinx sphinx_epytext sphinx_rtd_theme sphinx-sitemap \
                          sphinx-intl setuptools_scm
 
