--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install Python packages
         run: >
-            pip install dnspython beautifulsoup4 pyxdg requests \
+            pip install dnspython beautifulsoup4 requests \
                         sphinx sphinx_epytext sphinx_rtd_theme sphinx-sitemap
 
       - name: Build
