Publish the documentation when there is a release

--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -3,6 +3,8 @@ name: Publish LinkChecker Documentation on GitHub Pages
 on:
   push:
     branches: ["master"]
+  release:
+    types: [released]
 
 jobs:
   run:
