Prettify doc and .gihub folders
Resolved via `prettier -w doc .github`

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -4,8 +4,8 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ['master']
-    tags: 'v*'
+    branches: ["master"]
+    tags: "v*"
   workflow_dispatch:
 
 env:
