Remove MANIFEST.in
All files stored in Git are included in the sdist, unless excluded with
tool.hatch.build.exclude.

Build artifacts listed in tool.hatch.build.artifacts are also included.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,12 @@ artifacts = [
     "linkcheck/_release.py",
     "linkcheck/data/locale",
 ]
+exclude = [
+    ".github",
+    ".gitattributes",
+    ".gitignore",
+    "windows",
+]
 
 [tool.hatch.build.targets.sdist]
 strict-naming = false
